--- a/index.html
+++ b/index.html
@@ -2,10 +2,74 @@
 <html>
 <head>
 	<title>Scotland Yard</title>
+
+<style type="text/css">
+.main
+{
+	text-align: center;
+	font-family: arial;
+}
+
+h2
+{
+	color: #4c4c4c;
+}
+
+input[type="text"]
+{
+	width: 300px;
+	height: 30px;
+	border: none;
+	padding: 5px;
+	font-size: 16px;
+	border-bottom:2px solid #22A7F0;
+	text-align: center;
+}
+
+input[type="text"]:focus
+{
+	outline:2px solid #22A7F0;
+}
+input[type=radio] {
+		display:none;
+	}
+
+input[type=radio] + label {
+		display:inline-block;
+		margin: 0 10px;
+		padding: 10px 20px;
+		margin-bottom: 0;
+		font-size: 14px;
+		line-height: 20px;
+		letter-spacing: 2px;
+		color: #333;
+		text-align: center;
+		vertical-align: middle;
+		cursor: pointer;
+		background-color: #f5f5f5;
+	}
+
+	 input[type=radio]:checked + label {
+			background-image: none;
+			outline: 0;
+			background-color:#22A7F0;
+			color: #fff;
+		}
+</style>
+
 </head>
 <body>
 <div>
-				
+	<div class="main">
+	<h2>Enter Your Name</h2>
+		<input type="text" placeholder="Your name" />
+		<h2>Select Your Side</h2>
+
+    <input type="radio" id="radio1" name="radios" value="all" checked>
+       <label for="radio1">POLICE</label>
+    <input type="radio" id="radio2" name="radios"value="false">
+       <label for="radio2">THEIF</label>
+	</div>
 </div>
 </body>
 </html>
